css completed for responsive grid template

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Webpage Title</title>
+    <title>Responsive Grid Template</title>
 
     <script src="./mainscript.js" defer></script>
     <link rel="stylesheet" href="./styles.css">
@@ -15,16 +15,16 @@
 </head>
 
 <body>
-    
-    <div class="gridContainer">
-        <nav id="gridNav">Navbar</nav>
-        <div id="gridMain">Main</div>
-        <div id="gridSidebar">Sidebar</div>
-        <div id="gridContent1">Content1</div>
-        <div id="gridContent2">Content2</div>
-        <div id="gridContent3">Content3</div>
-        <div id="gridFooter">Footer</div>
-    </div>
+
+<div id="gridContainer">
+    <nav id="gridNav">Navbar</nav>
+    <main id="gridMain">Main</main>
+    <div id="gridSidebar">Sidebar</div>
+    <div id="gridContent1">Content1</div>
+    <div id="gridContent2">Content2</div>
+    <div id="gridContent3">Content3</div>
+    <footer id="gridFooter">Footer</footer>
+</div>
     
 </body>
 
